--- a/index.html
+++ b/index.html
@@ -29,14 +29,16 @@
       </header>
       <section>
         <h3>
-<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
+<a id="欢迎造访mycode主页" class="anchor" href="#%E6%AC%A2%E8%BF%8E%E9%80%A0%E8%AE%BFmycode%E4%B8%BB%E9%A1%B5" aria-hidden="true"><span class="octicon octicon-link"></span></a>欢迎造访mycode主页：</h3>
 
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here <a href="https://guides.github.com/features/mastering-markdown/">using GitHub Flavored Markdown</a>, select a template crafted by a designer, and publish. After your page is generated, you can check out the new <code>gh-pages</code> branch locally. If you’re using GitHub Desktop, simply sync your repository and you’ll see the new branch.</p>
+<p>在 trunk/src/is 目录，是一个“基于传输层的接口服务器”程序。它可以实现长连接的多个程序间的数据交换。简化了网络交互密集型程序的部署，效率较高。</p>
 
 <h3>
-<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span class="octicon octicon-link"></span></a>Designer Templates</h3>
+<a id="应用场景" class="anchor" href="#%E5%BA%94%E7%94%A8%E5%9C%BA%E6%99%AF" aria-hidden="true"><span class="octicon octicon-link"></span></a>应用场景：</h3>
 
-<p>We’ve crafted some handsome templates for you to use. Go ahead and click 'Continue to layouts' to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved.</p>
+<p>客户端A 向其建立长连接时注册一个标志符字符串 "clientA"，客户端B 向其建立长连接时注册一个标志符字符串 "clientB"。
+此时 客户端A 之间 客户端B 依据一个 简易的协议（详情在 Documentation） 交换数据。
+如果上述交换的数据是即时聊天讯息，这个场景亦可以理解成一个简易聊天系统。</p>
 
 <h3>
 <a id="creating-pages-manually" class="anchor" href="#creating-pages-manually" aria-hidden="true"><span class="octicon octicon-link"></span></a>Creating pages manually</h3>
