Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="wrapper">
       <header>
         <h1>Mycode</h1>
-        <p>Let&#39;s browse the world.</p>
+        <p>停止空谈，开始行动！</p>
 
         <p class="view"><a href="https://github.com/nibaozhu/mycode">View the Project on GitHub <small>nibaozhu/mycode</small></a></p>
 
