--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Mycode by nibaozhu</title>
+    <title>mycode by nibaozhu</title>
 
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/github-light.css">
@@ -15,7 +15,7 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1>Mycode</h1>
+        <h1>mycode</h1>
         <p>停止空谈，开始行动！</p>
 
         <p class="view"><a href="https://github.com/nibaozhu/mycode">View the Project on GitHub <small>nibaozhu/mycode</small></a></p>
