--- a/index.html
+++ b/index.html
@@ -36,24 +36,24 @@
 <h3>
 <a id="应用场景" class="anchor" href="#%E5%BA%94%E7%94%A8%E5%9C%BA%E6%99%AF" aria-hidden="true"><span class="octicon octicon-link"></span></a>应用场景：</h3>
 
-<p>客户端A 向其建立长连接时注册一个标志符字符串 "clientA"，客户端B 向其建立长连接时注册一个标志符字符串 "clientB"。
+<p>客户端A 向其建立长连接时注册一个32位正整数标志 "12"，客户端B 向其建立长连接时注册一个32位正整数标志 "13"。
 此时 客户端A 之间 客户端B 依据一个 简易的协议（详情在 Documentation） 交换数据。
 如果上述交换的数据是即时聊天讯息，这个场景亦可以理解成一个简易聊天系统。</p>
 
 <h3>
-<a id="creating-pages-manually" class="anchor" href="#creating-pages-manually" aria-hidden="true"><span class="octicon octicon-link"></span></a>Creating pages manually</h3>
+<a id="设计期间考虑到了什么问题" class="anchor" href="#%E8%AE%BE%E8%AE%A1%E6%9C%9F%E9%97%B4%E8%80%83%E8%99%91%E5%88%B0%E4%BA%86%E4%BB%80%E4%B9%88%E9%97%AE%E9%A2%98" aria-hidden="true"><span class="octicon octicon-link"></span></a>设计期间考虑到了什么问题：</h3>
 
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
-
-<h3>
-<a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
-
-<p>You can <a href="https://github.com/blog/821" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor’s GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
+<p>假如某一刻需要转发的报文长度是 1024kb（通常情况下tcp 的读、写缓存区是640kb），第一次写入的时候，通常只能写入 640kb，此时还有 384kb 的报文需要转发，但仍然将“写链表”的节点移除。此时监听目的文件描述符的EPOLLOUT事件，若可以再次做写操作。此时会被捕获，并将程序的该缓存区的地址插入“写链表”用于排队。这提高了效率。</p>
 
 <h3>
-<a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
+<a id="作者" class="anchor" href="#%E4%BD%9C%E8%80%85" aria-hidden="true"><span class="octicon octicon-link"></span></a>作者：</h3>
 
-<p>Having trouble with Pages? Check out our <a href="https://help.github.com/pages">documentation</a> or <a href="https://github.com/contact">contact support</a> and we’ll help you sort it out.</p>
+<p>目前的主要作者是 <a href="https://github.com/nibaozhu" class="user-mention">@nibaozhu</a>。</p>
+
+<h3>
+<a id="如果遇到bug" class="anchor" href="#%E5%A6%82%E6%9E%9C%E9%81%87%E5%88%B0bug" aria-hidden="true"><span class="octicon octicon-link"></span></a>如果遇到bug：</h3>
+
+<p>请在 问题列表 issues 告知我。</p>
       </section>
       <footer>
         <p>This project is maintained by <a href="https://github.com/nibaozhu">nibaozhu</a></p>
