--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <h3>
 <a id="欢迎造访mycode主页" class="anchor" href="#%E6%AC%A2%E8%BF%8E%E9%80%A0%E8%AE%BFmycode%E4%B8%BB%E9%A1%B5" aria-hidden="true"><span class="octicon octicon-link"></span></a>欢迎造访mycode主页：</h3>
 
-<p>在 trunk/src/is 目录，是一个“基于传输层的接口服务器”程序。它可以实现长连接的多个程序间的数据交换。简化了网络交互密集型程序的部署，效率较高。</p>
+<p>在 <a href="https://github.com/nibaozhu/mycode/tree/master/src/is">trunk/src/is</a> 目录，是一个“基于传输层的接口服务器”程序。它可以实现长连接的多个程序间的数据交换。简化了网络交互密集型程序的部署，效率较高。</p>
 
 <h3>
 <a id="应用场景" class="anchor" href="#%E5%BA%94%E7%94%A8%E5%9C%BA%E6%99%AF" aria-hidden="true"><span class="octicon octicon-link"></span></a>应用场景：</h3>
