--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <h1>mycode</h1>
         <p>停止空谈，开始行动！</p>
 
-        <p class="view"><a href="https://github.com/nibaozhu/mycode">View the Project on GitHub <small>nibaozhu/mycode</small></a></p>
+        <p class="view"><a href="https://github.com/nibaozhu/mycode">在GitHub查看这个项目<small>nibaozhu/mycode</small></a></p>
 
 
         <ul>
