--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
   </head>
-  <body>
+  <body id="index_html">
     <div class="wrapper">
       <header>
         <h1>mycode</h1>
@@ -56,7 +56,7 @@
 <!-- duoshuo.com -->
     
 <!-- 多说评论框 start -->
-	<div class="ds-thread" data-thread-key="请将此处替换成文章在你的站点中的ID" data-title="请替换成文章的标题" data-url="请替换成文章的网址"></div>
+	<div class="ds-thread" data-thread-key="index_html" data-title="超级服务器" data-url="http://nibaozhu.cn/"></div>
 <!-- 多说评论框 end -->
 <!-- 多说公共JS代码 start (一个网页只需插入一次) -->
 <script type="text/javascript">
