--- a/index.html
+++ b/index.html
@@ -31,8 +31,7 @@
 <h3>
 <a id="应用场景" class="anchor" href="#%E5%BA%94%E7%94%A8%E5%9C%BA%E6%99%AF" aria-hidden="true"><span class="octicon octicon-link"></span></a>应用场景:</h3>
 
-<p>客户端(例如: A, B)向超级服务器建立长连接时注册分别32位正整数标志(例如: "12", "13"). 客户端依据一个简易的协议(详情在 Documentation) 交换数据.
-如果上述交换的数据是即时聊天讯息,这个场景可以理解成一个简易聊天系统.</p>
+<p>客户端(例如: A, B)向超级服务器建立长连接时注册分别32位正整数标志(例如: "12", "13"). 客户端依据一个简易的协议(详情在 Documentation) 交换数据.如果上述交换的数据是即时聊天讯息,这个场景可以理解成一个简易聊天系统.</p>
 
 <h3>
 <a id="设计期间考虑到了什么问题" class="anchor" href="#%E8%AE%BE%E8%AE%A1%E6%9C%9F%E9%97%B4%E8%80%83%E8%99%91%E5%88%B0%E4%BA%86%E4%BB%80%E4%B9%88%E9%97%AE%E9%A2%98" aria-hidden="true"><span class="octicon octicon-link"></span></a>设计期间考虑到了什么问题:</h3>
