--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
   </head>
-  <body id="index_html" font-family:"Microsoft YaHei" font-size:"14px">
+  <body id="index_html" style="font-family:新宋体">
     <div class="wrapper">
       <header>
         <h1>mycode</h1>
