--- a/index.html
+++ b/index.html
@@ -61,4 +61,27 @@
     <script src="javascripts/scale.fix.js"></script>
     
   </body>
+
+<!-- duoshuo.com -->
+    
+<!-- 多说评论框 start -->
+	<div class="ds-thread" data-thread-key="index_html" data-title="超级服务器" data-url="http://nibaozhu.cn/"></div>
+<!-- 多说评论框 end -->
+<!-- 多说公共JS代码 start (一个网页只需插入一次) -->
+<script type="text/javascript">
+var duoshuoQuery = {short_name:"is1"};
+	(function() {
+		var ds = document.createElement('script');
+		ds.type = 'text/javascript';ds.async = true;
+		ds.src = (document.location.protocol == 'https:' ? 'https:' : 'http:') + '//static.duoshuo.com/embed.js';
+		ds.charset = 'UTF-8';
+		(document.getElementsByTagName('head')[0] 
+		 || document.getElementsByTagName('body')[0]).appendChild(ds);
+	})();
+	</script>
+<!-- 多说公共JS代码 end -->
+
+<!-- duoshuo.com -->
+
 </html>
+
